Bug 1852744 - Fix toolbar customization contents overflowing window width. r=Paenglab
Differential Revision: https://phabricator.services.mozilla.com/D201710

--HG--
extra : moz-landing-system : lando

--- a/mail/themes/shared/mail/unifiedToolbar.css
+++ b/mail/themes/shared/mail/unifiedToolbar.css
@@ -143,6 +143,7 @@ unified-toolbar-customization {
   display: flex;
   flex-direction: column;
   position: relative;
+  overflow: hidden;
   --customization-footer-padding: 12px;
   box-shadow:
     0 2px 12px -3px rgba(0, 0, 0, 0.5),
